--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -67,7 +67,7 @@ jobs:
           sudo apt-get install -y ruby-full
 
       - name: Setup Ruby
-        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
+        uses: ruby/setup-ruby@v1.115.3
         with:
           ruby-version: '3.0' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
