--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -67,11 +67,9 @@ jobs:
           sudo apt-get install -y ruby-full
 
       - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.0' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
+        run: | 
+          echo "ruby=$(which ruby)" >> $GITHUB_PATH 
+          echo "rubygems=$(which gem)" >> $GITHUB_PATH
 
       - name: Setup Pages
         id: pages
