--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,62 +25,27 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-# jobs:
-#   # Build job
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#       - name: Setup Ruby
-#         uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
-#         with:
-#           ruby-version: '3.0' # Not needed with a .ruby-version file
-#           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-#           cache-version: 0 # Increment this number if you need to re-download cached gems
-#       - name: Setup Pages
-#         id: pages
-#         uses: actions/configure-pages@v2
-#       - name: Build with Jekyll
-#         # Outputs to the './_site' directory by default
-#         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-#         env:
-#           JEKYLL_ENV: production
-#       - name: Upload artifact
-#         # Automatically uploads an artifact from the './_site' directory by default
-#         uses: actions/upload-pages-artifact@v1
-
 jobs:
   # Build job
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install Ruby
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo add-apt-repository ppa:deadsnakes/ppa
-          sudo apt-get update
-          sudo apt-get install -y ruby-full
-
+        uses: actions/checkout@v4
       - name: Setup Ruby
-        run: | 
-          echo "ruby=$(which ruby)" >> $GITHUB_PATH 
-          echo "rubygems=$(which gem)" >> $GITHUB_PATH
-
+        uses: ruby/setup-ruby@v1 #0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
+        with:
+          ruby-version: '3.3' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
-
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
-
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
@@ -96,3 +61,38 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+
+# jobs:
+#   # Build job
+#   build:
+#     runs-on: ubuntu-24.04
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
+
+#       - name: Install Ruby
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y software-properties-common
+#           sudo add-apt-repository ppa:deadsnakes/ppa
+#           sudo apt-get update
+#           sudo apt-get install -y ruby-full
+
+#       - name: Setup Ruby
+#         run: | 
+#           echo "ruby=$(which ruby)" >> $GITHUB_PATH 
+#           echo "rubygems=$(which gem)" >> $GITHUB_PATH
+
+#       - name: Setup Pages
+#         id: pages
+#         uses: actions/configure-pages@v2
+
+#       - name: Build with Jekyll
+#         # Outputs to the './_site' directory by default
+#         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+#         env:
+#           JEKYLL_ENV: production
+
+#       - name: Upload artifact
+#         # Automatically uploads an artifact from the './_site' directory by default
+#         uses: actions/upload-pages-artifact@v1
